plugins {
    id 'checkstyle'
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'   // keep for Gradle 7.x
}

repositories { mavenCentral() }

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
}

application {
    mainClass.set("mimi.MiMi")
}

run { standardInput = System.in }

shadowJar {
    archiveBaseName = "mimi"
    archiveClassifier = null
    archiveFileName = 'mimi.jar'
}

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }  // you’re on JDK 17
}

checkstyle {
    toolVersion = '11.0.0'
}

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"

        showExceptions true
        exceptionFormat "full"
        showCauses true
        showStackTraces true
        showStandardStreams = false
    }
}

